# Localiser

./: .env.example  .gitignore  README.md  pyproject.toml
localiser/: __init__.py  __main__.py  config.py  db.py  llm_client.py  translator.py  validate.py
plans/: mongo_locale_translator_plan.md
